<pre> tags no longer overflow the whole project content, they have now their individual scrollbars

--- a/css/notebook_note.css
+++ b/css/notebook_note.css
@@ -53,7 +53,6 @@
     padding-bottom: 2em;
     box-shadow: 0em 0.1em 0.5em #C0C0C0;
     border-radius: 0 0 1em 1em;
-    overflow: auto;
 }
 
 .c-heading {
